--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ pygame = "^2.6.1"
 cocotb = "^1.9.2"
 cocotb-bus = "^0.2.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.0"
+pytest-xdist = "^3.8.0"
+pytest-html = "^4.1.1"
 
 [build-system]
 requires = ["poetry-core"]
